# MARVIS-EVAL

./: .gitignore  Mavis_Benchmark_PRD.md  Mavis_Benchmark_gemini.md  PRD.md  README.MD  deep-research-chatgpt.md  deep_research_gemini.md  pyproject.toml  round1-gpt.md
.github/workflows/: ci.yml
cases/examples/: smoke_seed_cases.json
docs/: ASSERTION_DSL.md  GDPVAL_ALIGNMENT.md  MAVIS_CLI_SOP.md  RUNBOOK.html  RUNNING_MAVIS.md  demo.html  index.html
fixtures/bug_triage_001/: repo_tree.txt
fixtures/desktop_contracts_001/incoming/: readme.txt
fixtures/email_reply_safe_001/input/: refund_policy.md
fixtures/excel_anomaly_001/input/: sales.csv
fixtures/multimodal_meeting_minutes_001/input/: recording.aiff
fixtures/os_settings_001/state/: pre_state.json
fixtures/pitch_deck_001/input/: notes.md
fixtures/shopping_compare_001/archive/: amazon-monitor-detail-a.html  amazon-monitor-detail-b.html  amazon-monitor-detail-c.html  amazon-monitor-search.html
fixtures/travel_plan_001/archive/: tokyo-family-venues.html  tokyo-vegetarian.html  tokyo-weather-may.html
fixtures/voice_memo_to_email_001/input/: memo.aiff
mavis_eval/: __init__.py  assertions.py  cli.py  evaluator.py  reporting.py  schema.py
mavis_eval/adapters/: __init__.py  mavis_runner.py
prompts/: deliverable_judge_v1.0.txt  pairwise_expert_judge_v1.0.txt  visual_judge_v1.0.txt
schemas/: case.schema.json
scripts/: build_summary_md.py  export_from_mavis_db.py  run_all_cases.py
tests/: __init__.py  test_assertions.py  test_mavis_runner.py  test_reporting.py  test_schema.py
(+3 files in other folders)
